[gd_scene load_steps=29 format=3 uid="uid://ddewsshw2qq0g"]

[ext_resource type="Texture2D" uid="uid://wp2qbh8anpra" path="res://assets/ui/dress_up_ui/tops_tab/topstab.png" id="1_tab7j"]
[ext_resource type="Texture2D" uid="uid://b3ovakqwh28o6" path="res://assets/ui/dress_up_ui/bottoms_tab/bottomstab.png" id="2_tmhhk"]
[ext_resource type="Texture2D" uid="uid://dse4jljo4u4xp" path="res://assets/ui/dress_up_ui/shoes_tab/shoestab.png" id="3_yippn"]
[ext_resource type="Texture2D" uid="uid://cvfq3p7a4xa0n" path="res://assets/ui/dress_up_ui/accessories_tab/accessories_tab.png" id="4_bekfi"]
[ext_resource type="Texture2D" uid="uid://dej7ryrk38u6" path="res://assets/dolls/adrienne/adrienne_model.png" id="5_70np5"]
[ext_resource type="Script" uid="uid://donlfu7ejak7b" path="res://scripts/doll_body.gd" id="6_ptna8"]
[ext_resource type="Script" uid="uid://cqdlmp41wpjet" path="res://scripts/notebook.gd" id="7_tf7qr"]
[ext_resource type="PackedScene" uid="uid://fqewmihbr5kr" path="res://dressup/dolls/adrienne/stickers/adrienne_shirt_1.tscn" id="7_vfd42"]
[ext_resource type="Script" uid="uid://dn63k5pl14mny" path="res://scripts/sticker_tab.gd" id="8_8g23i"]
[ext_resource type="PackedScene" uid="uid://d1n64f7xn35pn" path="res://dressup/dolls/adrienne/stickers/adrienne_shirt_2.tscn" id="8_rwdc2"]
[ext_resource type="PackedScene" uid="uid://du1lwxohbh5u0" path="res://dressup/dolls/adrienne/stickers/adrienne_accessory_1.tscn" id="8_vfd42"]
[ext_resource type="PackedScene" uid="uid://wpmtqcof1pul" path="res://dressup/dolls/adrienne/stickers/adrienne_shirt_3.tscn" id="9_7okdk"]
[ext_resource type="PackedScene" uid="uid://bvn7ru00hc6nl" path="res://dressup/dolls/adrienne/stickers/adrienne_accessory_2.tscn" id="9_pl11k"]
[ext_resource type="PackedScene" uid="uid://cahpgjqfkrgfs" path="res://dressup/dolls/adrienne/stickers/adrienne_accessory_3.tscn" id="10_0twww"]
[ext_resource type="Texture2D" uid="uid://c54j7ltt6ex2f" path="res://assets/dolls/adrienne/adrienne_hair.png" id="10_3lqa2"]
[ext_resource type="PackedScene" uid="uid://cs0enb5t44600" path="res://dressup/dolls/adrienne/stickers/adrienne_shirt_4.tscn" id="10_870fg"]
[ext_resource type="PackedScene" uid="uid://drioly60i6kqq" path="res://dressup/dolls/adrienne/stickers/adrienne_accessory_4.tscn" id="11_7quid"]
[ext_resource type="PackedScene" uid="uid://dmcdj6jus7aby" path="res://dressup/dolls/adrienne/stickers/adrienne_skirt_1.tscn" id="11_10dn6"]
[ext_resource type="PackedScene" uid="uid://crlf3rfksobnk" path="res://dressup/dolls/adrienne/stickers/adrienne_skirt_2.tscn" id="12_j4h25"]
[ext_resource type="PackedScene" uid="uid://oafq3tdx61mt" path="res://dressup/dolls/adrienne/stickers/adrienne_skirt_3.tscn" id="13_2rilf"]
[ext_resource type="PackedScene" uid="uid://ctrx2d0er2f2p" path="res://dressup/dolls/adrienne/stickers/adrienne_skirt_4.tscn" id="14_pn2yp"]
[ext_resource type="PackedScene" uid="uid://tbjgpq5mpebg" path="res://dressup/dolls/adrienne/stickers/adrienne_shoes_1.tscn" id="15_68i5p"]
[ext_resource type="PackedScene" uid="uid://dwrhuwj5eudvg" path="res://dressup/dolls/adrienne/stickers/adrienne_shoes_2.tscn" id="16_2uohg"]
[ext_resource type="PackedScene" uid="uid://132cgl0pwtur" path="res://dressup/dolls/adrienne/stickers/adrienne_shoes_3.tscn" id="17_okfpi"]
[ext_resource type="PackedScene" uid="uid://cpi0i023ujtjj" path="res://dressup/dolls/adrienne/stickers/adrienne_shoes_4.tscn" id="18_lf2fj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i286f"]

[sub_resource type="Theme" id="Theme_4i4fu"]
TabContainer/styles/panel = SubResource("StyleBoxEmpty_i286f")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ikguk"]
load_path = "res://.godot/imported/accessorytab.png-33952969653806933aec76f16d06d2b3.ctex"

[node name="Dressup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="UglyWorkaround" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
metadata/_edit_lock_ = true

[node name="TopsTab" type="TextureRect" parent="UglyWorkaround"]
layout_mode = 0
offset_left = 388.0
offset_top = 1.0
offset_right = 1153.8
offset_bottom = 648.0
texture = ExtResource("1_tab7j")
expand_mode = 1
metadata/_tab_index = 0
metadata/_edit_lock_ = true

[node name="BottomsTab" type="TextureRect" parent="UglyWorkaround"]
layout_mode = 0
offset_left = 388.0
offset_top = 1.0
offset_right = 1153.8
offset_bottom = 648.0
texture = ExtResource("2_tmhhk")
expand_mode = 1
metadata/_tab_index = 0
metadata/_edit_lock_ = true

[node name="ShoesTab" type="TextureRect" parent="UglyWorkaround"]
layout_mode = 0
offset_left = 388.0
offset_top = 1.0
offset_right = 1153.8
offset_bottom = 648.0
texture = ExtResource("3_yippn")
expand_mode = 1
metadata/_tab_index = 0
metadata/_edit_lock_ = true

[node name="Accessories" type="TextureRect" parent="UglyWorkaround"]
layout_mode = 0
offset_left = 388.0
offset_top = 1.0
offset_right = 1153.8
offset_bottom = 648.0
texture = ExtResource("4_bekfi")
expand_mode = 1
metadata/_tab_index = 0
metadata/_edit_lock_ = true

[node name="Notebook" type="TabContainer" parent="." node_paths=PackedStringArray("tops_tab", "bottoms_tab", "shoes_tab", "accessories_tab")]
layout_mode = 0
offset_left = 388.0
offset_top = 1.0
offset_right = 1153.8
offset_bottom = 648.0
theme = SubResource("Theme_4i4fu")
current_tab = 0
tabs_visible = false
script = ExtResource("7_tf7qr")
tops_tab = NodePath("TopsTab")
bottoms_tab = NodePath("BottomsTab")
shoes_tab = NodePath("ShoesTab")
accessories_tab = NodePath("AccessoriesTab")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="TopsTab" type="TextureRect" parent="Notebook"]
layout_mode = 2
texture = ExtResource("1_tab7j")
expand_mode = 1
script = ExtResource("8_8g23i")
metadata/_tab_index = 0
metadata/_edit_lock_ = true

[node name="AdrienneShirt1" parent="Notebook/TopsTab" instance=ExtResource("7_vfd42")]
layout_mode = 0

[node name="AdrienneShirt2" parent="Notebook/TopsTab" instance=ExtResource("8_rwdc2")]
layout_mode = 0

[node name="AdrienneShirt3" parent="Notebook/TopsTab" instance=ExtResource("9_7okdk")]
layout_mode = 0

[node name="AdrienneShirt4" parent="Notebook/TopsTab" instance=ExtResource("10_870fg")]
layout_mode = 0

[node name="AdrienneShirt5" parent="Notebook/TopsTab" instance=ExtResource("7_vfd42")]
layout_mode = 0
offset_left = 274.0
offset_top = 214.0
offset_right = 981.0
offset_bottom = 849.0

[node name="BottomsTab" type="TextureRect" parent="Notebook"]
visible = false
layout_mode = 2
texture = ExtResource("2_tmhhk")
expand_mode = 1
script = ExtResource("8_8g23i")
metadata/_tab_index = 1
metadata/_edit_lock_ = true

[node name="AdrienneSkirt1" parent="Notebook/BottomsTab" instance=ExtResource("11_10dn6")]
layout_mode = 0

[node name="AdrienneSkirt2" parent="Notebook/BottomsTab" instance=ExtResource("12_j4h25")]
layout_mode = 0
offset_left = 300.0
offset_right = 729.0
offset_bottom = 399.0

[node name="AdrienneSkirt3" parent="Notebook/BottomsTab" instance=ExtResource("13_2rilf")]
layout_mode = 0

[node name="AdrienneSkirt4" parent="Notebook/BottomsTab" instance=ExtResource("14_pn2yp")]
layout_mode = 0

[node name="ShoesTab" type="TextureRect" parent="Notebook"]
visible = false
layout_mode = 2
texture = ExtResource("3_yippn")
expand_mode = 1
script = ExtResource("8_8g23i")
metadata/_tab_index = 2
metadata/_edit_lock_ = true

[node name="AdrienneShoes1" parent="Notebook/ShoesTab" instance=ExtResource("15_68i5p")]
layout_mode = 0

[node name="AdrienneShoes2" parent="Notebook/ShoesTab" instance=ExtResource("16_2uohg")]
layout_mode = 0

[node name="AdrienneShoes3" parent="Notebook/ShoesTab" instance=ExtResource("17_okfpi")]
layout_mode = 0

[node name="AdrienneShoes4" parent="Notebook/ShoesTab" instance=ExtResource("18_lf2fj")]
layout_mode = 0

[node name="AccessoriesTab" type="TextureRect" parent="Notebook"]
visible = false
layout_mode = 2
texture = SubResource("CompressedTexture2D_ikguk")
expand_mode = 1
script = ExtResource("8_8g23i")
metadata/_tab_index = 3
metadata/_edit_lock_ = true

[node name="AdrienneAccessory1" parent="Notebook/AccessoriesTab" instance=ExtResource("8_vfd42")]
layout_mode = 0
offset_top = 100.0
offset_bottom = 999.0

[node name="AdrienneAccessory2" parent="Notebook/AccessoriesTab" instance=ExtResource("9_pl11k")]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 489.0
offset_bottom = 1055.0

[node name="AdrienneAccessory3" parent="Notebook/AccessoriesTab" instance=ExtResource("10_0twww")]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 526.0
offset_bottom = 309.0

[node name="AdrienneAccessory4" parent="Notebook/AccessoriesTab" instance=ExtResource("11_7quid")]
layout_mode = 0
offset_left = 400.0
offset_top = 100.0
offset_right = 757.0
offset_bottom = 274.0

[node name="AccessoriesButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1027.0
offset_top = 454.0
offset_right = 1108.0
offset_bottom = 550.0

[node name="ShoesButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1028.0
offset_top = 337.0
offset_right = 1109.0
offset_bottom = 433.0

[node name="BottomsButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1028.0
offset_top = 217.0
offset_right = 1112.0
offset_bottom = 314.0

[node name="TopsButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1028.0
offset_top = 101.0
offset_right = 1113.0
offset_bottom = 197.0

[node name="Doll" type="Control" parent="."]
anchors_preset = 0
offset_left = 191.0
offset_top = 340.0
offset_right = 191.0
offset_bottom = 340.0
metadata/_edit_group_ = true

[node name="Base" type="Control" parent="Doll"]
anchors_preset = 0
scale = Vector2(0.3, 0.3)

[node name="AdrienneHair" type="TextureRect" parent="Doll/Base"]
z_index = 4
layout_mode = 0
offset_left = -206.66669
offset_top = -973.3333
offset_right = 147.33331
offset_bottom = -427.3333
texture = ExtResource("10_3lqa2")

[node name="DollBody" type="TextureRect" parent="Doll/Base" node_paths=PackedStringArray("outfit")]
layout_mode = 0
offset_left = -347.00003
offset_top = -953.0
offset_right = 346.99997
offset_bottom = 953.0
texture = ExtResource("5_70np5")
script = ExtResource("6_ptna8")
outfit = NodePath("../../Outfit")

[node name="Outfit" type="Control" parent="Doll"]
anchors_preset = 0

[connection signal="pressed" from="AccessoriesButton" to="Notebook" method="_on_accessories_button_pressed"]
[connection signal="pressed" from="ShoesButton" to="Notebook" method="_on_shoes_button_pressed"]
[connection signal="pressed" from="BottomsButton" to="Notebook" method="_on_bottoms_button_pressed"]
[connection signal="pressed" from="TopsButton" to="Notebook" method="_on_tops_button_pressed"]
